# dg-openheidelberg

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  couchdbclient.py  nextcloud.py  openproject.py
src/dg_openheidelberg/: __init__.py
src/dg_openheidelberg/defs/: assets.py  initialisation.py
src/dg_openheidelberg/defs/data/: accounts.csv  data.md  nextcloud_user.csv  processed_data.csv  user_onboarding.csv
tests/: test_assets.py  test_config.py  test_couchdbclient.py  test_nextcloud.py  test_openproject.py
