[project]
name = "dg-openheidelberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "couchdb>=1.2",
    "dagster>=1.11.2",
    "nc-py-api[calendar]>=0.6.0",
    "pandas>=2.3.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dg_openheidelberg"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dg_openheidelberg"
registry_modules = [
    "dg_openheidelberg.components.*",
]
